--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,8 @@
 /Pre-Midterm/build.xml
 !/Pre-Midterm/src
 /Pre-Midterm/build/
+/TestPriorityQueue/nbproject/
+/TestPriorityQueue/manifest.mf
+/TestPriorityQueue/build.xml
+!/TestPriorityQueue/src
+/TestPriorityQueue/build/
